# AutoILD

./: .gitignore  LICENSE  Makefile  README.md  gui.py  main.py  pyproject.toml
config/: config.yaml
data/input/: readme.txt
data/output/: readme.txt
src/pipeline/: classifier.py
src/rules/: ild_categories.py
src/utils/: export.py
